--- a/k8s/service_1/service_1.yaml
+++ b/k8s/service_1/service_1.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back
+  name: service1-service
 spec:
   selector:
-    app: lab1
-    tier: backend
+    app: service1
   ports:
-    - protocol: TCP
-      port: 90
-      targetPort: http
+    - port: 80
+      targetPort: 8080
