reworked files for lab#3

--- a/k8s_1/service_3/service_3_deployment.yaml
+++ b/k8s_1/service_3/service_3_deployment.yaml
@@ -18,3 +18,8 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 8090
+          env:
+            - name: VAULT_ADDR
+              value: 'http://vault:8200'
+            - name: JWT_PATH
+              value: '/var/run/secrets/kubernetes.io/serviceaccount/token'
